--- a/test/locales/en-us.json
+++ b/test/locales/en-us.json
@@ -1,3 +1,6 @@
 {
-	"response.serveError.title": "response.serveError.title"
+	"response.serveError.title": "response.serveError.title",
+	"ER_BAD_FIELD_ERROR: Unknown column 'token' in 'field list'": "ER_BAD_FIELD_ERROR: Unknown column 'token' in 'field list'",
+	"expireDate cannot be null": "expireDate cannot be null",
+	"ER_BAD_FIELD_ERROR: Unknown column 'expireDate' in 'field list'": "ER_BAD_FIELD_ERROR: Unknown column 'expireDate' in 'field list'"
 }
